--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,13 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdkVersion 31
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.coding.informer.dictionary_app_v3"
         minSdk 21
-        targetSdk 33
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
