--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'io.github.jan-tennert.supabase:[module e.g. functions-kt or gotrue-kt]:VERSION'
-    implementation 'io.ktor:ktor-client-cio:KTOR_VERSION'
-    implementation 'io.github.jan-tennert.supabase:gotrue-kt:VERSION'
-    implementation 'io.github.jan-tennert.supabase:[module]:VERSION'
-    implementation 'io.ktor:ktor-client-[engine]:KTOR_VERSION'
+    implementation 'io.github.jan-tennert.supabase:storage-kt:1.0.0'
 }
