--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
+//    id 'kotlin-android-extensions'
+    id('org.jetbrains.kotlin.android') apply false
 }
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "29.0.3"
-
+    compileSdkVersion 33
+    compileSdkPreview "UpsideDownCake"
     defaultConfig {
         applicationId "com.coding.informer.dictionary_app_v3"
         minSdk 21
-        targetSdkVersion 29
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.core:core-ktx:+'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -55,5 +56,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'com.android.volley:volley:1.2.1'
-//    implementation 'io.github.jan-tennert.supabase:storage-kt:1.0.0'
+    implementation 'io.github.jan-tennert.supabase:storage-kt:1.0.0'
+//    implementation 'io.ktor:ktor-client-cio:2.3.0'
 }
